Refactored code into seperate files #2

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,8 @@
     <title>WaveCave</title>
   </head>
   <body>
-    <div id="wave-cave"></div>
+    <div id="upload-form"></div>
+    <div id="song-player"></div>
     <script src="main.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
