Updated index.html and added styling #2

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,17 +6,17 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
       integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="player-styles.css"/>
     <link
-      rel="stylesheet"
-      href="styles.css"
-    />
+      href="https://fonts.googleapis.com/css?family=Exo+2|Work+Sans:900|Oswald:700"
+      rel="stylesheet"/>
     <title>WaveCave</title>
   </head>
   <body>
     <div id="upload-form"></div>
-    <div id="song-player"></div>
+    <div id="wave-cave"></div>
     <script src="main.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
